fix broken style identifyer

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -101,7 +101,7 @@ figure {
     display: inline-block;
 }
 
-.UploadImg >  {
+.UploadImg > * {
     object-fit: cover;
 }
 
